fixed pdf size on smaller devices

--- a/public/css/homePPStyle.css
+++ b/public/css/homePPStyle.css
@@ -246,6 +246,9 @@ table th, table td {
     font-size: 2rem;
     margin: 3rem;
   }
+  .pricePredictionPdf{
+    width: 100%;
+  }
 
 }
 
